fix #475; prevent linebreaks in words

--- a/_1327/static/less/1327.less
+++ b/_1327/static/less/1327.less
@@ -416,7 +416,7 @@ table.vertically-aligned tr td {
 	vertical-align: middle;
 }
 
-table td {
+table#attachment-table td {
 	word-break: break-all;
 }
 
